[gd_scene load_steps=6 format=3 uid="uid://womdihdnb5ss"]

[ext_resource type="Script" path="res://elements/apple/apple.gd" id="1_ryukw"]
[ext_resource type="Texture2D" uid="uid://yr3d2gdfsoy4" path="res://assets/apple1.png" id="2_8klxb"]
[ext_resource type="Texture2D" uid="uid://c58bpd5jbr21l" path="res://assets/apple2.png" id="3_24sj3"]
[ext_resource type="Texture2D" uid="uid://cvqn2oc2i16g5" path="res://assets/apple3.png" id="4_drrog"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vl2iv"]
radius = 32.2025

[node name="Apple" type="Node2D"]
script = ExtResource("1_ryukw")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 13)
rotation = 3.14159
texture = ExtResource("2_8klxb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_vl2iv")

[node name="AppleParticles2D1" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
explosiveness = 0.11
texture = ExtResource("3_24sj3")
direction = Vector2(0, 2)
spread = 100.0
gravity = Vector2(0, 400)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angular_velocity_min = 100.0
angular_velocity_max = 100.0

[node name="AppleParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
lifetime = 2.0
one_shot = true
explosiveness = 0.11
texture = ExtResource("4_drrog")
direction = Vector2(0, 2)
spread = 100.0
gravity = Vector2(0, 400)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angular_velocity_min = 100.0
angular_velocity_max = 100.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
